feat: setup live cooking page & seach restaurants